--- a/posts/20210913.md
+++ b/posts/20210913.md
@@ -1,16 +1,14 @@
 ---
-layout: post date: 2021-09-13 title: Понеслась... description: This is a post on My Blog about win-win survival
-strategies. permalink: "posts/{{ title | slugTitle }}/"
+layout: post
+date: 2021-09-13
+title: Понеслась...
+description: This is a post on My Blog about win-win survival strategies.
+permalink: "posts/{{ title | slugTitle }}/"
 tags:
-
-- простотекст
-
+  - простотекст
 ---
-Для начала хотелось бы поздравить всех программистов с **Днем программиста 2021**! Вот и получилось приурочить выпуск
-проекта к такой дате.
+Для начала хотелось бы поздравить всех программистов с **Днем программиста 2021**! Вот и получилось приурочить выпуск проекта к такой дате.
 
-Я давно уже хотел создать ресурс со справочной информацией, собранной с просторов Интернета и отработанной на практике.
-Теперь не придется искать в истории браузера либо опять проходить весь путь поиска, если потребуется сделать что-то, что
-когда-то уже делал, но достаточно давно.
+Я давно уже хотел создать ресурс со справочной информацией, собранной с просторов Интернета и отработанной на практике. Теперь не придется искать в истории браузера либо опять проходить весь путь поиска, если потребуется сделать что-то, что когда-то уже делал, но достаточно давно.
 
 Понеслась...
