Change description for first post

--- a/posts/20210913.md
+++ b/posts/20210913.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2021-09-13
 title: Понеслась...
-description: This is a post on My Blog about win-win survival strategies.
+description: Коллекция. Начало.
 permalink: "posts/{{ title | slugTitle }}/"
 tags:
   - простотекст
