--- a/posts/20210913.md
+++ b/posts/20210913.md
@@ -1,12 +1,13 @@
 ---
 layout: post
 date: 2021-09-13
-title: Понеслась...
-description: Коллекция. Начало.
+title: Понеслась
+description: Коллекция. Начало
 permalink: "posts/{{ title | slugTitle }}/"
 tags:
   - простотекст
 ---
+
 Для начала хотелось бы поздравить всех программистов с **Днем программиста 2021**! Вот и получилось приурочить выпуск проекта к такой дате.
 
 Я давно уже хотел создать ресурс со справочной информацией, собранной с просторов Интернета и отработанной на практике. Теперь не придется искать в истории браузера либо опять проходить весь путь поиска, если потребуется сделать что-то, что когда-то уже делал, но достаточно давно.
