--- a/posts/20211003.md
+++ b/posts/20211003.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2021-10-03
 title: Домашний сервер на Docker - 1
-description: Настройка удобного управления Docker-контейнерами на домашнем сервере. VPS, acme.sh
+description: Настройка удобного управления Docker-контейнерами на домашнем сервере. VPS, acme.sh, Docker
 permalink: "posts/{{ title | slugTitle }}/"
 tags:
   - vps
