--- a/posts/20211010.md
+++ b/posts/20211010.md
@@ -58,3 +58,17 @@ tags:
 Файлы с переменными окружения при надобности требуется положить в указанную выше в настройках директорию с именем сервиса и расширением `.env`, например, `service1.env`. Также в корне репозитория можно создать файл настроек `settings.yml`. На текущий момент существует только возможность указания списка приоритетных в запуске сервисов в параметре `start`.
 
 Как запускать скрипт это уже личное решение. Так как с python'ом дела не имел, то предложить варианты будет сложно, не зная с чем можно столкнуться. Надеюсь, это не будет проблемой, и скрипт поможет облегчить работу.
+
+### Docker-compose
+
+Для удобного управления сервисами очень советую использовать `docker-compose`, который умеет разворачивать сразу несколько контейнеров для одного сервиса. То есть, мы получаем физически (в отдельном файле) и логически (выделенная локальная сеть) разделенные сервисы. В скрипте, который указан в предыдущем разделе, как раз используется для работы docker-compose.
+
+Так как команда представляет из себя python-скрипт, то установить его очень просто. Достаточно только скопировать сам скрипт из репозитория и разместить в удобном месте.
+
+```sh
+sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+sudo chmod +x /usr/local/bin/docker-compose
+sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+```
+
+На этом этапе можно уже попробовать поэкспериментировать с работой синхронизации репозитория и контейнеров.
