--- a/posts/20211010.md
+++ b/posts/20211010.md
@@ -65,7 +65,7 @@ tags:
 
 Так как команда представляет из себя python-скрипт, то установить его очень просто. Достаточно только скопировать сам скрипт из репозитория и разместить в удобном месте.
 
-```sh
+```bash
 sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 sudo chmod +x /usr/local/bin/docker-compose
 sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
