--- a/posts/20211016.md
+++ b/posts/20211016.md
@@ -221,7 +221,7 @@ notifier:
 
 # List of users
 users:
-  wirgen:
+  user:
     displayname: "User"
     password: "$argon2id$v=19$m=65536,t=1,p=8$aU9VK0hnOGF2QXBiQzRNeQ$2LwKnFS63k7zgmL6uG2EXHQ/Jg2JrFkqvng5WMgpZ5U"
     email: user@mymail.com
